--- a/css/style.css
+++ b/css/style.css
@@ -25,7 +25,7 @@ body {
 
 
 /* Utilties */
-.cointiner {
+.cointainer {
     max-width: 1080px;
     margin: 0 auto;
 }
@@ -42,9 +42,28 @@ margin: 0 1,5rem; */
 
 
 /* Header */
-<h1> {
-    color: ;
+h1 {
+    color: #e53170;
+    margin: 3rem 0;
+    text-align: center;
+    font-size: 3rem;
+    font-weight: 700;
 }
+p {
+    margin: 3rem 0;
+    text-align: center;
+    font-size: 1.2rem;
+    font-weight: 400;
+}
+
+/* Main */
+.main {
+background-color: aqua;
+}
+
+
+
+
 
 
 
