--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,6 @@
 /* COLOR PALETTE
 fuxia: #e53170
+azzurro: #00abe9
 */
 
 /* CUSTOM PROPERTIES */
@@ -49,7 +50,7 @@ h1 {
     font-size: 3rem;
     font-weight: 700;
 }
-p {
+header p {
     margin: 3rem 0;
     text-align: center;
     font-size: 1.2rem;
@@ -57,20 +58,45 @@ p {
 }
 
 /* Main */
-.main {
+main {
 background-color: aqua;
+}
+
+/* Card */
+.card {
+}
+
+.cart-item {
+background-color: #000;
+}
+
+.cart-item a {
+    color: #00abe9;
+}
+
+.cart-item img {
+    height: 100px;
+}
+
+.cart-item h2 {
+    color: #fff;
+    text-align: left;
+    margin: 1rem 0;
+}
+
+.cart-item p {
+    color: #fff;
+    text-align: left;
+    margin: 1rem 0;
 }
 
 
 
 
 
-
-
 /* TXT COPIA INCOLLA
-Meet our team
 
-MARCO BIANCHI Designer marcobianchi@team.com
+MARCO BIANCHI Designer 
 
 LAURA ROSSI Front-end developer laura.rossi@team.com
 
